spacing errors fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 *{
   margin: 0;
   padding: 0;
-  border: 1px solid black;
+  border: 1px dashed rgb(255, 0, 0);
   box-sizing: border-box;
 }
 
@@ -24,6 +24,7 @@ header {
   background-color: var(--primary-black);
   padding: 10px;
   height: 10%;
+  align-content: center;
 }
 
 .logo {
@@ -32,14 +33,20 @@ header {
 }
 
 aside {
-  height: 85%;
+  height: 87%;
   background-color: var(--accent-grey);
-  width: 17%;
+  width: 18%;
 }
 
 footer {
+  display: flex;
+  justify-content: center;
   height: 5%;
   color: var(--primary-white);
   background-color: var(--primary-black);
-  
+  font-size: 1.25rem;
+}
+
+footer p {
+  align-content: center;
 }
